[package]
name = "jsonrpc-test"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]

[dependencies]
#jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc" }
sha2 = "0.7"
hex = "0.3.2"
keys = { git = "https://github.com/artemii235/parity-bitcoin.git" }
bitcrypto = { git = "https://github.com/artemii235/parity-bitcoin.git" }
script = { git = "https://github.com/artemii235/parity-bitcoin.git" }
chain = { git = "https://github.com/artemii235/parity-bitcoin.git" }
serialization = { git = "https://github.com/artemii235/parity-bitcoin.git" }
byteorder = "1.2.2"
coins = { path = "./coins" }
eth = { path = "./eth" }
