[package]
name = "coins"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.11"
hyper-tls = "0.1.3"
rust-ini = "0.11"
rpc = { git = "https://github.com/artemii235/parity-bitcoin.git" }
[dependencies.jsonrpc-client-core]
git = "https://github.com/artemii235/jsonrpc-client-rs.git"
[dependencies.jsonrpc-client-http]
git = "https://github.com/artemii235/jsonrpc-client-rs.git"
features = ["tls"]